Melhorias e ajustes para o PhoneGap.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <meta name="keywords" content="rest, json, javascript" />
   <meta name="description" content="" />
  
-	<link rel="stylesheet" href="css/styles.css">  
+	<link rel="stylesheet" href="./css/styles.css">  
 
-	<script data-main="js/main" src="js/libs/require/require.js"></script>
+	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
 
