--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>.:: Expresso ::.</title>
+  <title>Expresso Mobile</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -15,6 +15,7 @@
   <meta name="author" content="Equipe Expresso Livre" />
   <meta name="keywords" content="rest, json, javascript" />
   <meta name="description" content="" />
+  <link href="./imgs/favicon.png" rel="icon" type="image/png" />
  
 	<link rel="stylesheet" href="./css/styles.css">  
 
