App reconhece automaticamente quando está ou não compilado para PhoneGap.
Também foi feita uma melhoria para receber os arquivos para Android
através do WebIntent.

--- a/index_android.html
+++ b/index_android.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="./css/styles.css">
 
   <script data-main="js/main" src="./js/libs/cordova/cordova.js"></script>
+  <script data-main="js/main" src="./js/libs/cordova/webintent.js"></script>
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
