Adicionado o spinner na Inicial.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
-
+  <div class="spinner"></div>
 </body>
 </html>
