--- a/index_android.html
+++ b/index_android.html
@@ -24,6 +24,6 @@
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
-
+  <div class="spinner"></div>
 </body>
 </html>
