--- a/index_android.html
+++ b/index_android.html
@@ -21,6 +21,8 @@
 
   <script data-main="js/main" src="./js/libs/cordova/cordova.js"></script>
   <script data-main="js/main" src="./js/libs/cordova/webintent.js"></script>
+  <script type="text/javascript" src="./js/libs/cordova/backgroundService-2.9.0.js"></script>
+  <script type="text/javascript" src="./js/libs/cordova/ExpressoService-2.9.0.js"></script>
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
