Alterações para permitir o envio de anexos em mensagens encaminhadas.

--- a/index_ios.html
+++ b/index_ios.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/ios_7.css">  
 
-  <script data-main="js/main" src="./cordova.js"></script>
+  <script data-main="js/main" src="./js/libs/cordova/cordova_ios.js"></script>
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
