--- a/index.html
+++ b/index.html
@@ -7,17 +7,41 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Expresso Mobile</title>
+  <title>Expresso</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+  <link rel="shortcut icon" href="./imgs/favicon.png" type="image/ico"/>
+
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
   <meta name="author" content="Equipe Expresso Livre" />
   <meta name="keywords" content="rest, json, javascript" />
   <meta name="description" content="" />
   <link href="./imgs/favicon.png" rel="icon" type="image/png" />
+
+  <!-- non-retina iPhone pre iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-57.png" sizes="57x57">
+  <!-- non-retina iPad pre iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-72.png" sizes="72x72">
+  <!-- non-retina iPad iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-76.png" sizes="76x76">
+  <!-- retina iPhone pre iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-114.png" sizes="114x114">
+  <!-- retina iPhone iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-120.png" sizes="120x120">
+  <!-- retina iPad pre iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-144.png" sizes="144x144">
+  <!-- retina iPad iOS 7 -->
+  <link rel="apple-touch-icon" href="./imgs/app-icons/icon-152.png" sizes="152x152">
  
 	<link rel="stylesheet" href="./css/styles.css">  
+
+  <script type="text/javascript">
+    if ((/iphone|ipad/gi).test(navigator.appVersion)) {
+      document.write('<link rel="stylesheet" href="./css/ios_7.css">');
+    }
+  </script>
 
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
