--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <title>Expresso</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta charset="UTF-8" />
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="pt-br" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <link rel="shortcut icon" href="./imgs/favicon.png" type="image/ico"/>
