Issue #20 - Finalização no Login Automático para Android
Finalizado o Login automático para a plataforma Android, também foi
implementado a troca de contas após o login, caso o usuário tenha mais
de uma conta cadastrada no sistema Android, ele pode selecionar outra
conta e se logar com ela.

--- a/index_android.html
+++ b/index_android.html
@@ -23,11 +23,12 @@
   <script data-main="js/main" src="./js/libs/cordova/webintent.js"></script>
   <script type="text/javascript" src="./js/libs/cordova/backgroundService-2.9.0.js"></script>
   <script type="text/javascript" src="./js/libs/cordova/ExpressoService-2.9.0.js"></script>
-  <script>var intent_auth = null;</script>
+  <script>
+    var intent_auth = null;
+  </script>
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
   <div class="spinner"></div>
 </body>
-
 </html>
