--- a/index_ios.html
+++ b/index_ios.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="./css/ios_7.css">  
 
   <script data-main="js/main" src="./js/libs/cordova/cordova_ios.js"></script>
+  <script data-main="js/main" src="./js/libs/cordova/ExternalFileUtil.js"></script>
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
