iOS Versão 2.1 - Adicionado o plugin da Camera.

--- a/index_ios.html
+++ b/index_ios.html
@@ -24,6 +24,11 @@
 
   <script data-main="js/main" src="./js/libs/cordova/ios/cordova.js"></script>
   <script data-main="js/main" src="./js/libs/cordova/ios/ExternalFileUtil.js"></script>
+  <script data-main="js/main" src="./js/libs/org.apache.cordova.camera/Camera.js"></script>
+  <script data-main="js/main" src="./js/libs/org.apache.cordova.camera/CameraConstants.js"></script>
+  <script data-main="js/main" src="./js/libs/org.apache.cordova.camera/CameraPopoverOptions.js"></script>
+  <script data-main="js/main" src="./js/libs/org.apache.cordova.camera/ios/CameraPopoverHandle.js"></script>
+  
 	<script data-main="js/main" src="./js/libs/require/require.js"></script>
 </head>
 <body id="mainAppPageContent" >
